# iabtcf-haskell

./: .gitignore  CHANGELOG.md  Main.hs  hie.yaml  iabtcf-haskell.cabal
app/: Main.hs
src/Iabtcf/: Parser.hs
