name:                iabtcf-haskell
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Sławomir Śledź
maintainer:          slawomir.sledz@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=2.0
library
  hs-source-dirs: src
  exposed-modules:
    Iabtcf.Parser
  build-depends:
    base >=4.12 && <4.13,
    bytestring >=0.10.8.2 && <0.11,
    base64-bytestring >=1.0.0.3 && <1.1,
    ghc >= 8.6.5
  default-language: Haskell2010  
executable iabtcf-haskell
  main-is: app/Main.hs
  build-depends:
    base >=4.12 && <4.13,
    bytestring >=0.10.8.2 && <0.11,
    base64-bytestring >=1.0.0.3 && <1.1,
    ghc >= 8.6.5
  default-language: Haskell2010
